@@ -2,7 +2,7 @@
 // an API wrapper for a collection of SMT solvers:
 // https://github.com/sosy-lab/java-smt
 //
-// SPDX-FileCopyrightText: 2026 Dirk Beyer <https://www.sosy-lab.org>
+// SPDX-FileCopyrightText: 2020 Dirk Beyer <https://www.sosy-lab.org>
 //
 // SPDX-License-Identifier: Apache-2.0
 
@@ -21,81 +21,78 @@ import com.google.common.collect.ImmutableSet;
 import com.google.errorprone.annotations.Immutable;
 import java.util.List;
 import java.util.Set;
+import java.util.regex.Pattern;
 import org.sosy_lab.java_smt.api.NumeralFormula.IntegerFormula;
 import org.sosy_lab.java_smt.api.NumeralFormula.RationalFormula;
+import org.sosy_lab.java_smt.basicimpl.Tokenizer;
 
 /**
- * Subclasses of this interface represent the different types of formulas supported by SMT solvers,
- * typically including boolean, integer, bitvector, and more. Each type corresponds to a specific
- * class of formulas that can be created and manipulated using the SMT solver's API.
- *
- * <p>Subclasses of this interface must be immutable, as they are used as keys in maps and sets, and
- * their immutability ensures that they can be safely shared and used without unintended side
- * effects.
+ * Type of a formula.
  *
  * @param <T> Formula class corresponding to the given formula type.
  */
 @SuppressWarnings("checkstyle:constantname")
 @Immutable
-public interface FormulaType<T extends Formula> {
+public abstract class FormulaType<T extends Formula> {
 
-  default boolean isArrayType() {
+  private FormulaType() {}
+
+  public boolean isArrayType() {
     return false;
   }
 
-  default boolean isBitvectorType() {
+  public boolean isBitvectorType() {
     return false;
   }
 
-  default boolean isBooleanType() {
+  public boolean isBooleanType() {
     return false;
   }
 
-  default boolean isFloatingPointType() {
+  public boolean isFloatingPointType() {
     return false;
   }
 
-  default boolean isFloatingPointRoundingModeType() {
+  public boolean isFloatingPointRoundingModeType() {
     return false;
   }
 
-  default boolean isNumeralType() {
+  public boolean isNumeralType() {
     return false;
   }
 
-  default boolean isRationalType() {
+  public boolean isRationalType() {
     return false;
   }
 
-  default boolean isIntegerType() {
+  public boolean isIntegerType() {
     return false;
   }
 
-  default boolean isSLType() {
+  public boolean isSLType() {
     return false;
   }
 
-  default boolean isStringType() {
+  public boolean isStringType() {
     return false;
   }
 
-  default boolean isRegexType() {
+  public boolean isRegexType() {
     return false;
   }
 
-  default boolean isEnumerationType() {
+  public boolean isEnumerationType() {
     return false;
   }
 
-  /** returns a human-readable representation of the formula type. */
   @Override
-  String toString();
+  public abstract String toString();
 
-  /** returns a correctly formatted string that can be used in SMTLIB2 declarations. */
-  String toSMTLIBString();
+  /** return the correctly formatted SMTLIB2 type declaration. */
+  public abstract String toSMTLIBString();
 
   @Immutable
-  abstract class NumeralType<T extends NumeralFormula> implements FormulaType<T> {
+  public abstract static class NumeralType<T extends NumeralFormula> extends FormulaType<T> {
 
     @Override
     public final boolean isNumeralType() {
@@ -104,7 +101,7 @@ public interface FormulaType<T extends Formula> {
   }
 
   @SuppressWarnings("ClassInitializationDeadlock")
-  FormulaType<RationalFormula> RationalType =
+  public static final FormulaType<RationalFormula> RationalType =
       new NumeralType<>() {
 
         @Override
@@ -124,7 +121,7 @@ public interface FormulaType<T extends Formula> {
       };
 
   @SuppressWarnings("ClassInitializationDeadlock")
-  FormulaType<IntegerFormula> IntegerType =
+  public static final FormulaType<IntegerFormula> IntegerType =
       new NumeralType<>() {
 
         @Override
@@ -143,7 +140,7 @@ public interface FormulaType<T extends Formula> {
         }
       };
 
-  FormulaType<BooleanFormula> BooleanType =
+  public static final FormulaType<BooleanFormula> BooleanType =
       new FormulaType<>() {
 
         @Override
@@ -162,12 +159,12 @@ public interface FormulaType<T extends Formula> {
         }
       };
 
-  static BitvectorType getBitvectorTypeWithSize(int size) {
+  public static BitvectorType getBitvectorTypeWithSize(int size) {
     return new BitvectorType(size);
   }
 
   @Immutable
-  final class BitvectorType implements FormulaType<BitvectorFormula> {
+  public static final class BitvectorType extends FormulaType<BitvectorFormula> {
     private final int size;
 
     private BitvectorType(int size) {
@@ -193,11 +190,7 @@ public interface FormulaType<T extends Formula> {
       if (pObj == this) {
         return true;
       }
-      if (!(pObj instanceof BitvectorType)) {
-        return false;
-      }
-      BitvectorType other = (BitvectorType) pObj;
-      return size == other.size;
+      return (pObj instanceof BitvectorType other) && size == other.size;
     }
 
     @Override
@@ -229,7 +222,7 @@ public interface FormulaType<T extends Formula> {
    */
   @Deprecated(since = "6.0", forRemoval = true)
   @SuppressWarnings("InlineMeSuggester")
-  static FloatingPointType getFloatingPointType(
+  public static FloatingPointType getFloatingPointType(
       int exponentSize, int mantissaSizeWithoutHiddenBit) {
     return getFloatingPointTypeFromSizesWithoutHiddenBit(
         exponentSize, mantissaSizeWithoutHiddenBit);
@@ -252,7 +245,7 @@ public interface FormulaType<T extends Formula> {
    *     significand), excluding the hidden bit.
    * @return the newly constructed {@link FloatingPointType}.
    */
-  static FloatingPointType getFloatingPointTypeFromSizesWithoutHiddenBit(
+  public static FloatingPointType getFloatingPointTypeFromSizesWithoutHiddenBit(
       int exponentSize, int mantissaSizeWithoutHiddenBit) {
     checkArgument(exponentSize > 1, "Exponent size must be greater than 1");
     checkArgument(
@@ -278,7 +271,7 @@ public interface FormulaType<T extends Formula> {
    *     significand), including the hidden bit.
    * @return the newly constructed {@link FloatingPointType}.
    */
-  static FloatingPointType getFloatingPointTypeFromSizesWithHiddenBit(
+  public static FloatingPointType getFloatingPointTypeFromSizesWithHiddenBit(
       int exponentSize, int mantissaSizeWithHiddenBit) {
     checkArgument(
         mantissaSizeWithHiddenBit > 1,
@@ -292,7 +285,7 @@ public interface FormulaType<T extends Formula> {
    *     of the sign bit, an exponent sized 8 bits, and a mantissa sized 23 bits (excluding the
    *     hidden bit).
    */
-  static FloatingPointType getSinglePrecisionFloatingPointType() {
+  public static FloatingPointType getSinglePrecisionFloatingPointType() {
     return FloatingPointType.SINGLE_PRECISION_FP_TYPE;
   }
 
@@ -301,12 +294,12 @@ public interface FormulaType<T extends Formula> {
    *     of the sign bit, an exponent sized 11 bits, and a mantissa sized 52 bits (excluding the
    *     hidden bit).
    */
-  static FloatingPointType getDoublePrecisionFloatingPointType() {
+  public static FloatingPointType getDoublePrecisionFloatingPointType() {
     return FloatingPointType.DOUBLE_PRECISION_FP_TYPE;
   }
 
   @Immutable
-  final class FloatingPointType implements FormulaType<FloatingPointFormula> {
+  public static final class FloatingPointType extends FormulaType<FloatingPointFormula> {
 
     @SuppressWarnings("removal")
     private static final FloatingPointType SINGLE_PRECISION_FP_TYPE =
@@ -391,11 +384,8 @@ public interface FormulaType<T extends Formula> {
       if (this == obj) {
         return true;
       }
-      if (!(obj instanceof FloatingPointType)) {
-        return false;
-      }
-      FloatingPointType other = (FloatingPointType) obj;
-      return this.exponentSize == other.exponentSize
+      return (obj instanceof FloatingPointType other)
+          && this.exponentSize == other.exponentSize
           && this.mantissaSizeWithoutHiddenBit == other.mantissaSizeWithoutHiddenBit;
     }
 
@@ -412,35 +402,37 @@ public interface FormulaType<T extends Formula> {
     }
   }
 
-  FormulaType<FloatingPointRoundingModeFormula> FloatingPointRoundingModeType =
-      new FormulaType<>() {
+  public static final FormulaType<FloatingPointRoundingModeFormula> FloatingPointRoundingModeType =
+      new FloatingPointRoundingModeType();
 
-        @Override
-        public boolean isFloatingPointRoundingModeType() {
-          return true;
-        }
+  private static final class FloatingPointRoundingModeType
+      extends FormulaType<FloatingPointRoundingModeFormula> {
 
-        @Override
-        public String toString() {
-          return "FloatingPointRoundingMode";
-        }
+    @Override
+    public boolean isFloatingPointRoundingModeType() {
+      return true;
+    }
 
-        @Override
-        public String toSMTLIBString() {
-          throw new UnsupportedOperationException(
-              "rounding mode is not expected in symbol declarations");
-        }
-      };
+    @Override
+    public String toString() {
+      return "FloatingPointRoundingMode";
+    }
+
+    @Override
+    public String toSMTLIBString() {
+      return "RoundingMode";
+    }
+  }
 
   @SuppressWarnings("MethodTypeParameterName")
-  static <TD extends Formula, TR extends Formula> ArrayFormulaType<TD, TR> getArrayType(
+  public static <TD extends Formula, TR extends Formula> ArrayFormulaType<TD, TR> getArrayType(
       FormulaType<TD> pDomainSort, FormulaType<TR> pRangeSort) {
     return new ArrayFormulaType<>(pDomainSort, pRangeSort);
   }
 
   @SuppressWarnings("ClassTypeParameterName")
-  final class ArrayFormulaType<TI extends Formula, TE extends Formula>
-      implements FormulaType<ArrayFormula<TI, TE>> {
+  public static final class ArrayFormulaType<TI extends Formula, TE extends Formula>
+      extends FormulaType<ArrayFormula<TI, TE>> {
 
     private final FormulaType<TE> elementType;
     private final FormulaType<TI> indexType;
@@ -465,7 +457,7 @@ public interface FormulaType<T extends Formula> {
 
     @Override
     public String toString() {
-      return String.format("Array<%s,%s>", indexType, elementType);
+      return "Array<%s,%s>".formatted(indexType, elementType);
     }
 
     @Override
@@ -478,11 +470,9 @@ public interface FormulaType<T extends Formula> {
       if (this == obj) {
         return true;
       }
-      if (!(obj instanceof ArrayFormulaType)) {
-        return false;
-      }
-      ArrayFormulaType<?, ?> other = (ArrayFormulaType<?, ?>) obj;
-      return elementType.equals(other.elementType) && indexType.equals(other.indexType);
+      return (obj instanceof ArrayFormulaType<?, ?> other)
+          && elementType.equals(other.elementType)
+          && indexType.equals(other.indexType);
     }
 
     @Override
@@ -491,11 +481,11 @@ public interface FormulaType<T extends Formula> {
     }
   }
 
-  static EnumerationFormulaType getEnumerationType(String pName, Set<String> pElements) {
+  public static EnumerationFormulaType getEnumerationType(String pName, Set<String> pElements) {
     return new EnumerationFormulaType(pName, pElements);
   }
 
-  final class EnumerationFormulaType implements FormulaType<EnumerationFormula> {
+  public static final class EnumerationFormulaType extends FormulaType<EnumerationFormula> {
 
     private final String name;
     private final ImmutableSet<String> elements;
@@ -524,7 +514,7 @@ public interface FormulaType<T extends Formula> {
 
     @Override
     public String toString() {
-      return String.format("%s (%s)", name, Joiner.on(", ").join(elements));
+      return "%s (%s)".formatted(name, Joiner.on(", ").join(elements));
     }
 
     @Override
@@ -537,11 +527,9 @@ public interface FormulaType<T extends Formula> {
       if (this == obj) {
         return true;
       }
-      if (!(obj instanceof EnumerationFormulaType)) {
-        return false;
-      }
-      EnumerationFormulaType other = (EnumerationFormulaType) obj;
-      return name.equals(other.name) && elements.equals(other.elements);
+      return (obj instanceof EnumerationFormulaType other)
+          && name.equals(other.name)
+          && elements.equals(other.elements);
     }
 
     @Override
@@ -550,7 +538,7 @@ public interface FormulaType<T extends Formula> {
     }
   }
 
-  FormulaType<StringFormula> StringType =
+  public static final FormulaType<StringFormula> StringType =
       new FormulaType<>() {
 
         @Override
@@ -569,7 +557,7 @@ public interface FormulaType<T extends Formula> {
         }
       };
 
-  FormulaType<RegexFormula> RegexType =
+  public static final FormulaType<RegexFormula> RegexType =
       new FormulaType<>() {
 
         @Override
@@ -592,7 +580,7 @@ public interface FormulaType<T extends Formula> {
    * Parse a string and return the corresponding type. This method is the counterpart of {@link
    * #toString()}.
    */
-  static FormulaType<?> fromString(String t) {
+  public static FormulaType<?> fromString(String t) {
     if (BooleanType.toString().equals(t)) {
       return BooleanType;
     } else if (IntegerType.toString().equals(t)) {
@@ -622,6 +610,39 @@ public interface FormulaType<T extends Formula> {
       String elementsStr = t.substring(t.indexOf("(") + 1, t.length() - 1);
       Set<String> elements = ImmutableSet.copyOf(Splitter.on(", ").split(elementsStr));
       return new EnumerationFormulaType(name, elements);
+    } else {
+      throw new AssertionError("unknown type:" + t);
+    }
+  }
+
+  public static FormulaType<?> fromSMTLIBString(String t) {
+    if (t.equals("Bool")) {
+      return BooleanType;
+    } else if (t.equals("Int")) {
+      return IntegerType;
+    } else if (t.equals("Real")) {
+      return RationalType;
+    } else if (t.equals("String")) {
+      return StringType;
+    } else if (t.equals("RegLan")) {
+      return RegexType;
+    } else if (t.equals("RoundingMode")) {
+      return FloatingPointRoundingModeType;
+    } else if (t.startsWith("(_ FloatingPoint")) {
+      var m = Pattern.compile("\\(\\s*_\\s+FloatingPoint\\s+(\\d+)\\s+(\\d+)\\s*\\)").matcher(t);
+      checkArgument(m.find());
+      return FormulaType.getFloatingPointTypeFromSizesWithHiddenBit(
+          Integer.parseInt(m.group(1)), Integer.parseInt(m.group(2)));
+    } else if (t.startsWith("(_ BitVec")) {
+      var m = Pattern.compile("\\(\\s*_\\s+BitVec\\s+(\\d+)\\s*\\)").matcher(t);
+      checkArgument(m.find());
+      return FormulaType.getBitvectorTypeWithSize(Integer.parseInt(m.group(1)));
+    } else if (t.startsWith("(Array")) {
+      var tokens = Tokenizer.tokenize(t.substring(1, t.length() - 1));
+      checkArgument(tokens.size() == 3);
+      var domain = fromSMTLIBString(tokens.get(1));
+      var range = fromSMTLIBString(tokens.get(2));
+      return FormulaType.getArrayType(domain, range);
     } else {
       throw new AssertionError("unknown type:" + t);
     }
